updated wrapper and home  template and styles to prevent data 'overflowing' styled portion of content

--- a/src/app/view-wrapper/view-wrapper.component.scss
+++ b/src/app/view-wrapper/view-wrapper.component.scss
@@ -1,4 +1,4 @@
 .wrapper {
   background-color: tomato;
-  height: 100vh;
+  min-height: 100%;
 }
